--- a/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
@@ -39,8 +39,19 @@
                 <h5 class="modal-title">Upload</h5>
             </div>
             <div class="modal-body">
-                <div>
-                    <input id="filePicker" type="file" class="form-control mb-3" />
+                <div class="d-grid gap-3 mb-3">
+                    <div>
+                        <label for="nameInput" class="form-label">Name</label>
+                        <input id="nameInput" class="form-control" type="text">
+                    </div>
+                    <div>
+                        <label for="filePicker" class="form-label">Data</label>
+                        <input id="filePicker" type="file" class="form-control"/>
+                    </div>
+                    <div>
+                        <label for="altInput" class="form-label">Alt Text</label>
+                        <textarea id="altInput" class="form-control" rows="4"></textarea>
+                    </div>
                 </div>
                 <div>
                     <button id="uploadButton" class="btn btn-primary">Upload</button>
@@ -130,7 +141,9 @@
                 const file = files[0];
                 
                 const formData = new FormData();
+                formData.set("name", $("#nameInput").val());
                 formData.set("file", file);
+                formData.set("altText", $("#altInput").val());
                 
                 $.ajax({
                     method: "POST",
