MediaGallery: Use X button on upload modal

--- a/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
@@ -37,6 +37,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Upload</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <div class="modal-body">
                 <div class="d-grid gap-3 mb-3">
@@ -56,9 +57,6 @@
                 <div>
                     <button id="uploadButton" class="btn btn-primary">Upload</button>
                 </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
             </div>
         </div>
     </div>
