MediaGallery: Set upload button within upload modal to be right-aligned Consistency!

--- a/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
+++ b/BlueBirdDX.WebApp/Pages/MediaGallery.cshtml
@@ -54,7 +54,7 @@
                         <textarea id="altInput" class="form-control" rows="4"></textarea>
                     </div>
                 </div>
-                <div>
+                <div class="text-end">
                     <button id="uploadButton" class="btn btn-primary">Upload</button>
                 </div>
             </div>
