ThreadEdit: Add spacing between elements in attach modal

--- a/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
+++ b/BlueBirdDX.WebApp/Pages/ThreadEdit.cshtml
@@ -90,13 +90,13 @@
                 
                 <div class="tab-content" id="attachTabsContent">
                     <div class="tab-pane fade show active" id="media-tab-pane" role="tabpanel" tabindex="0">
-                        <select id="mediaSelect" class="form-select">
+                        <select id="mediaSelect" class="form-select mt-3 mb-3">
                         </select>
                         <button id="attachMediaButton" class="btn btn-primary">Save</button>
                     </div>
                     <div class="tab-pane fade" id="post-tab-pane" role="tabpanel" tabindex="0">
-                        <label for="postUrlInput" class="form-label">Name</label>
-                        <input id="postUrlInput" class="form-control" type="text">
+                        <label for="postUrlInput" class="form-label mt-3">URL</label>
+                        <input id="postUrlInput" class="form-control mb-3" type="text">
                         <button id="attachPostButton" class="btn btn-primary">Save</button>
                     </div>
                 </div>
